Fixed missing var statements within for-in loops

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 * Added ipv4 and ipv6 to additional methods, thanks Natal Ngétal
 * Added Japanese (JA) localization, thanks Bryan Meyerovich
 * Added Catalan (CA) localization, thanks Xavier de Pedro
+* Fixed missing var statements within for-in loops
 
 1.7
 ---
