--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1.9.0
+---
+* Added Thai (TH) localization, fixes #85
+
 1.8.0
 ---
 * Improved NL localization (http://plugins.jquery.com/node/14120)
