Update delegation selectors to get rid of pseudo-selectors in favor of qSA. Use type=email on main demo for some manual verification. Update changelog.

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 ---
 * Added Basque (EU) localization
 * Fixed issue #127 - Finnish translations has one : instead of ;
+* Added in support for HTML 5 input types, fixes #97
 
 1.8.1
 ---
