Fixed #177 - Fix validation of a single radio or checkbox input
The validator element() method delegates to check(). When check() is
passed a radio or checkbox input element (call it 'A'), it instead
checks the first element with the same name in the form (call it 'B').

If element B is judged invalid, a bug occurs. Element A will have been
added to the currentElements array, but element B is what is added to
the errorList. So, when showErrors is called, element A will be in
validElements(), and will be unhighlighted.

This is fixed by having element() also change its target to be the
first element of the same name when passed a checkbox or radio input.

Signed-off-by: Eric Naeseth <eric@thumbtack.com>

--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,7 @@
 * Fixed swedish and norwedian translations, min/max messages got switched. Fixes #181
 * Fixed #184 - resetForm: should unset lastElement
 * Fixed #71 - improve existing time method and add time12h method for 12h am/pm time format
+* Fixed #177 - Fix validation of a single radio or checkbox input
 
 1.8.1
 ---
