--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,7 @@
 * Added 'pattern' to additional-methods to validate against arbitraty regular expressions.
 * Improved email method to not allow the dot at the end (valid by RFC, but unwanted here). Fixes #143
 * Fixed swedish and norwedian translations, min/max messages got switched. Fixes #181
+* Fixed #184 - resetForm: should unset lastElement
 
 1.8.1
 ---
